httpRoute/httproute-alertmanager.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager
  namespace: monitoring
spec:
  hostnames:
    - alertmanager.kanismile.com
  parentRefs:
    - name: edge-gateway
      namespace: nginx-gateway
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-alertmanager
          port: 9093
      matches:
        - path:
            type: PathPrefix
            value: /
